--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/parrot-logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Quiz App - Introduction to Large Language Models</title>
+    <meta name="description" content="ParrotClaw - Learn and Quiz on Large Language Models" />
+    <title>ParrotClaw - LLM Quiz & Learning Platform</title>
   </head>
   <body>
     <div id="root"></div>
